# Back

./: .gitignore  .isort.cfg  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Success_Student/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_midia_audios_alter_midia_imagens_and_more.py  0002_conteudo_criado_por_conteudo_paragrafo_and_more.py  0002_remove_formulario_site.py  0003_alternativa_disciplina_remove_conteudo_id_midia_and_more.py  0003_conteudo_midia_delete_responde_delete_sel_res_form_and_more.py  0003_remove_alternativa_texto_alternativas_and_more.py  0004_alter_alternativa_texto_alternativa_and_more.py  0004_alter_conteudo_disciplina_alter_conteudo_nome_and_more.py
core/models/: __init__.py  conteudo.py  formulario.py  midia.py  pergunta.py  resposta.py  usuario.py
core/serializers/: __init__.py  conteudo.py  formulario.py  midia.py  pergunta.py  resposta.py  usuario.py
core/views/: __init__.py  conteudo.py  formulario.py  midia.py  pergunta.py  resposta.py  usuario.py
